<resources>
    <string name="app_name">DemoFirebaseChatApp</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="hii_display_name_format">Hi, %1$s</string>
    <string name="chatId_format">Chat:%1$s,%2$s</string>
</resources>